# webcat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: homebrew-tap.yml
docs/superpowers/plans/: 2026-06-22-webcat-terminal-browser.md  2026-06-27-mcp-agent-observability.md
docs/superpowers/specs/: 2026-06-22-webcat-terminal-browser-design.md  2026-06-27-mcp-agent-observability-design.md
src/: app.rs  cli.rs  config.rs  error.rs  geometry.rs  main.rs  observability.rs
src/browser/: frame.rs  mod.rs  profile.rs
src/input/: action.rs  hints.rs  mod.rs
src/mcp/: install.rs  mod.rs  server.rs
src/renderer/: graphics.rs  mod.rs  shm.rs
src/terminal/: capability.rs  input.rs  keyboard.rs  mod.rs  mouse.rs  raw.rs
src/ui/: mod.rs
tests/: browser_integration.rs  frame_probe.rs
