[package]
name = "webcat"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"
crossterm = { version = "0.28", features = ["event-stream"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
signal-hook = "0.3"
libc = "0.2"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

# Optimize dependencies (notably the JPEG decoder) even in debug builds so
# screencast frames decode fast enough for smooth rendering, while keeping the
# webcat crate itself unoptimized for fast, debuggable builds.
[profile.dev.package."*"]
opt-level = 3
